# AI-Deepfake-Discover

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  COSTS.md  PRD.md  PROMPT_BOOK.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assessments/: self-assessment-2026-01-14.md
data/: README.md
docs/: architecture.md  llm-video-analysis-prompt.md  prompts.md  research.md
docs/adr/: 001-local-llm-inference.md  002-frame-sampling-strategy.md  003-majority-voting-aggregation.md  README.md
notebooks/: experiment_analysis.ipynb
quality-checks/: quality-check-2026-01-14-223000.md
results/: experiment_results.md
results/metrics/: experiment_metrics.json
scripts/: generate_visualizations.py  scan_secrets.py
src/: __init__.py  agent.py  main.py  models.py  parsing.py  prompts.py  providers.py  video_utils.py
tests/: __init__.py  conftest.py  test_agent.py
